--- a/app/build.gradle
+++ b/app/build.gradle
@@ -134,11 +134,11 @@ configurations {
 }
 
 dependencies {
-    ktlint "com.pinterest:ktlint:0.41.0"
+    ktlint "com.pinterest:ktlint:0.43.2"
 
     instantImplementation('com.google.android.gms:play-services-instantapps:17.0.1')
 
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     // Tooling support (Previews, etc.)
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
@@ -146,7 +146,7 @@ dependencies {
     implementation "androidx.compose.foundation:foundation:$compose_version"
     // Material Design
     implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.material3:material3:1.0.0-alpha01"
+    implementation "androidx.compose.material3:material3:1.0.0-alpha02"
     implementation 'com.github.KieronQuinn:MonetCompat:0.2.1'
     implementation 'androidx.palette:palette-ktx:1.0.0'
     // Navigation
@@ -160,10 +160,10 @@ dependencies {
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.20.2"
 
     implementation "androidx.datastore:datastore-preferences:1.0.0"
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc01"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc02"
     implementation "androidx.activity:activity-compose:1.4.0"
     //Room
-    def room_version = "2.3.0"
+    def room_version = "2.4.0-rc01"
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
