--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -13,12 +13,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: Create empty keystore
       run: echo "storeFile=/" > keystore.properties
-    - name: set up JDK 11
-      uses: actions/setup-java@v2
+    - name: set up JDK 1.11
+      uses: actions/setup-java@v1
       with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: gradle
+          java-version: 1.11
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
