--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -1,64 +1,69 @@
 name: Compare app size
 
 on:
-  pull_request:
-    branches: [ main ]
+    pull_request:
+        branches: [ main ]
 
 jobs:
-  build:
+    build:
 
-    runs-on: ubuntu-latest
+        runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                build_type: [ debug, release ]
+        steps:
+            -   uses: actions/checkout@v2
+            -   name: Create empty keystore
+                run: echo "storeFile=/" > keystore.properties
+            -   name: set up JDK 1.11
+                uses: actions/setup-java@v1
+                with:
+                    java-version: 1.11
+            -   name: Grant execute permission for gradlew
+                run: chmod +x gradlew
+            -   id: type
+                uses: ASzc/change-string-case-action@v2
+                with:
+                    string: ${{ matrix.build_type }}
+            -   name: Build PR app
+                run: ./gradlew assembleFull${{ steps.type.outputs.capitalized }}
+            -   name: Copy PR app
+                run: |
+                    echo $PWD
+                    ls
+                    cp ./app/build/outputs/apk/full/${{ matrix.build_type }}/app-full-${{ matrix.build_type }}.apk main.apk
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Create empty keystore
-      run: echo "storeFile=/" > keystore.properties
-    - name: set up JDK 1.11
-      uses: actions/setup-java@v1
-      with:
-          java-version: 1.11
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+            -   uses: actions/checkout@v2
+                with:
+                    ref: main
+            -   name: Build main app
+                run: ./gradlew assembleFull${{ steps.type.outputs.capitalized }}
+            -   name: Copy PR app
+                run: |
+                    echo $PWD
+                    ls
+                    cp ./app/build/outputs/apk/full/${{ matrix.build_type }}/app-full-${{ matrix.build_type }}.apk main.apk
 
-    - name: Build PR app
-      run: ./gradlew assembleFullDebug
-    - name: Copy PR app
-      run: |
-        echo $PWD
-        ls
-        cp ./app/build/outputs/apk/full/debug/app-full-release.apk main.apk
-
-    - uses: actions/checkout@v2
-      with:
-        ref: main
-    - name: Build main app
-      run: ./gradlew assembleFullDebug
-    - name: Copy PR app
-      run: |
-        echo $PWD
-        ls
-        cp ./app/build/outputs/apk/full/debug/app-full-release.apk main.apk
-
-    - uses: microsoft/android-app-size-diff@v1.0.5
-      name: Run APK size comparision
-      with:
-       baseAppPath: main.apk
-       targetAppPath: PR.apk
-       summaryOutputPath: summary.md
-       telemetryEnabled: false
-    - name: Copy summary to env
-      id: comment
-      run: |
-        content=$(cat $1)
-        content="${content//$'\n'/'%0A'}"
-        content="${content//$'\r'/'%0D'}"
-        echo "::set-output name=comment::${content}"
-    - uses: actions/github-script@v5
-      with:
-        script: |
-          github.rest.issues.createComment({
-            issue_number: context.issue.number,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            body: steps.comment.outputs.comment
-          })
+            -   uses: microsoft/android-app-size-diff@v1.0.5
+                name: Run APK size comparision
+                with:
+                    baseAppPath: main.apk
+                    targetAppPath: PR.apk
+                    summaryOutputPath: summary.md
+                    telemetryEnabled: false
+            -   name: Copy summary to env
+                id: comment
+                run: |
+                    content=$(cat $1)
+                    content="${content//$'\n'/'%0A'}"
+                    content="${content//$'\r'/'%0D'}"
+                    echo "::set-output name=comment::${content}"
+            -   uses: actions/github-script@v5
+                    with:
+                        script: |
+                            github.rest.issues.createComment({
+                              issue_number: context.issue.number,
+                              owner: context.repo.owner,
+                              repo: context.repo.repo,
+                              body: steps.comment.outputs.comment
+                            })
