--- a/app/build.gradle
+++ b/app/build.gradle
@@ -143,6 +143,7 @@ dependencies {
             attribute(Bundling.BUNDLING_ATTRIBUTE, getObjects().named(Bundling, Bundling.EXTERNAL))
         }
     }
+    implementation platform("androidx.compose:compose-bom:$compose_bom_version")
 
     instantImplementation('com.google.android.gms:play-services-instantapps:18.0.1')
     playStoreImplementation 'com.google.android.gms:play-services-wearable:18.0.0'
@@ -150,13 +151,13 @@ dependencies {
     playStoreImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
 
     // Tooling support (Previews, etc.)
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-tooling"
+    implementation "androidx.compose.ui:ui-tooling-preview"
 
     // Material Design
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.material3:material3:1.0.1"
-    implementation "androidx.compose.material3:material3-window-size-class:1.0.1"
+    implementation "androidx.compose.material:material"
+    implementation "androidx.compose.material3:material3"
+    implementation "androidx.compose.material3:material3-window-size-class"
 
     implementation 'com.github.KieronQuinn:MonetCompat:0.2.1'
     implementation 'androidx.palette:palette-ktx:1.0.0'
@@ -164,17 +165,17 @@ dependencies {
     implementation "androidx.navigation:navigation-compose:2.5.3"
 
     // Integration with observables
-    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation "androidx.compose.runtime:runtime-livedata"
     // Jetpack Utils
     implementation "com.google.accompanist:accompanist-flowlayout:0.26.4-beta"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.26.4-beta"
     implementation "com.google.accompanist:accompanist-navigation-animation:0.26.4-beta"
-    implementation "androidx.compose.animation:animation-graphics:$compose_version"
+    implementation "androidx.compose.animation:animation-graphics"
 
     implementation "androidx.activity:activity-compose:1.6.1"
 
     // UI Tests
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.3"
     testImplementation 'junit:junit:4.13.2'
 }
 
