--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,9 @@
 buildscript {
     ext {
         kotlin_version = '1.7.10'
-        compose_version = '1.3.3'
         wear_compose_version = '1.1.1'
         room_version = "2.5.0"
+        compose_bom_version = "2023.01.00"
     }
     repositories {
         google()
@@ -26,6 +26,6 @@ allprojects {
     }
 }
 
-task clean(type: Delete) {
+tasks.register('clean') {
     delete rootProject.buildDir
 }
