--- a/cofi-share/build.gradle
+++ b/cofi-share/build.gradle
@@ -48,11 +48,13 @@ android {
 }
 
 dependencies {
+    implementation platform("androidx.compose:compose-bom:$compose_bom_version")
+
     api 'androidx.appcompat:appcompat:1.6.0'
-    implementation "androidx.compose.ui:ui:$compose_version"
     implementation 'androidx.test:core-ktx:1.5.0'
-    implementation "androidx.compose.foundation:foundation:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.ui:ui"
+    implementation "androidx.compose.foundation:foundation"
+    implementation "androidx.compose.material:material"
     api "androidx.datastore:datastore-preferences:1.0.0"
 
     //Room
