--- a/wearOS/build.gradle
+++ b/wearOS/build.gradle
@@ -86,6 +86,7 @@ licenseReport {
 
 dependencies {
     implementation project(path: ':cofi-share')
+    implementation platform("androidx.compose:compose-bom:$compose_bom_version")
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'com.google.android.gms:play-services-wearable:18.0.0'
@@ -93,8 +94,8 @@ dependencies {
     implementation "androidx.wear.compose:compose-material:$wear_compose_version"
     implementation "androidx.wear.compose:compose-foundation:$wear_compose_version"
     implementation "androidx.wear.compose:compose-navigation:$wear_compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview"
+    implementation "androidx.compose.runtime:runtime-livedata"
     implementation "com.google.android.horologist:horologist-compose-layout:0.2.5"
     implementation "com.google.accompanist:accompanist-pager:0.28.0"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
@@ -104,8 +105,8 @@ dependencies {
     implementation "androidx.wear:wear-input:1.1.0"
     implementation 'androidx.wear:wear:1.2.0'
 
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.3"
+    debugImplementation "androidx.compose.ui:ui-tooling"
+    debugImplementation "androidx.compose.ui:ui-test-manifest"
     androidTestImplementation 'androidx.test:core:1.5.0'
 }
