--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ android {
             signingConfig signingConfigs.debug
             minifyEnabled true
             manifestPlaceholders["profileable"] = true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             applicationIdSuffix ".benchmark"
             versionNameSuffix "-benchmark"
         }
